--- a/report/is_purchase_order_line.xml
+++ b/report/is_purchase_order_line.xml
@@ -10,6 +10,7 @@
                     <group>
                         <group>
                             <field name="order_id" />
+                            <field name="is_cfc_id" />
                             <field name="order_line_id" />
                             <field name="partner_id" />
                             <field name="date_order" />
@@ -50,6 +51,7 @@
                 <filter string="En attente de confirmation" domain="['&amp;', ('is_date_confirmation','=', False)  , ('qt_reste', '!=', 0)]" />
                 <filter string="Retard"                     domain="['&amp;', ('date_planned','&lt;', current_date), ('qt_reste', '!=', 0)]" />
                 <field name="order_id" />
+                <field name="is_cfc_id" />
                 <field name="partner_id" />
                 <field name="product_id" />
                 <field name="is_ref_fournisseur" />
@@ -72,6 +74,7 @@
         <field name="arch" type="xml">
             <tree create="false" colors="green:qt_reste == 0; red:date_planned&lt;current_date and qt_reste != 0;">
                 <field name="order_id"           widget="many2one_clickable"  />
+                <field name="is_cfc_id"           widget="many2one_clickable"  />
                 <field name="partner_id"         widget="many2one_clickable"  />
                 <field name="date_order" />
                 <field name="is_num_da" />
