--- a/views/report_stockpicking.xml
+++ b/views/report_stockpicking.xml
@@ -245,7 +245,7 @@ TODO :
                                         </td>
                                         <td class="text-right">
 
-                                            <t t-esc='"{:,.0f}".format(qt1).replace(","," ").replace(".",",")'/> 
+                                            <t t-esc='"{:,.2G}".format(qt1).replace(","," ").replace(".",",")'/> 
                                         </td>
                                         <td class="text-left">
                                             <span t-field="move.product_uom" /> 
