--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -2,7 +2,6 @@
 <openerp>
 <data>
 
-
         <template id="is_report_invoice_style">
             .header {
                 font-size:10pt;
@@ -62,16 +61,6 @@
         </template>
 
 
-
-        <!--
-        <div class="row">
-            <div class="col-xs-5  text-center">
-            <div class="col-xs-1" />
-            <div class="col-xs-6">
-        </div>
-        -->
-
-
         <!-- Entête personnalisé Plastigray -->
         <template id="is_report_invoice_external_layout_header">
             <div class="header">
@@ -80,7 +69,7 @@
                         <td style="width:40%;border:0pt">
                             <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
                             <div class="expediteur">
-                                S.A.S. au capital de 2 102 400 € <br />
+                                S.A.S. au capital de 2 200 000 € <br />
                                 Siège social : ZAC de Gray Sud <br />
                                 CS 10133 - <b>70104 GRAY Cedex</b><br />
                                 Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
@@ -251,12 +240,6 @@
                         </td>
                         <td>
                             <span t-field="l.name"/>
-                            <!--
-                            <t t-if="l.product_id.is_origine_produit_id">
-                                <br />
-                                <i>Origine : <span t-field="l.product_id.is_origine_produit_id.name"/></i>
-                            </t>
-                            -->
                             <t t-if="l.product_id.is_nomenclature_douaniere">
                                 <br />
                                 <i>Nomenclature douanière : <span t-field="l.product_id.is_nomenclature_douaniere"/></i>
@@ -280,20 +263,6 @@
                     </tr>
                 </tbody>
             </table>
-
-            <!-- Affichage de l'escompte -->
-            <!--
-            <t t-set="escompte" t-value="0"/>
-            <t t-set="tva"      t-value="0"/>
-            <t t-foreach="o.tax_line" t-as="tax">
-                <t t-if="tax.account_id.code=='665000'">
-                    <t t-set="escompte" t-value="escompte + tax.amount"/>
-                </t>
-                <t t-if="tax.account_id.code!='665000'">
-                    <t t-set="tva" t-value="tva + tax.amount"/>
-                </t>
-            </t>
-            -->
             <div class="row">
                 <div class="col-xs-4">
                     <table class="table table-condensed">
@@ -324,14 +293,12 @@
                         <tr t-if="o.is_escompte" >
                             <td>Escompte</td>
                             <td class="text-right">
-                                <!--<span t-esc='"{:,.2f}".format(abs(escompte)).replace(","," ").replace(".",",")'/> €-->
                                 <span t-field="o.is_escompte" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                         <tr>
                             <td>T.V.A.</td>
                             <td class="text-right">
-                                <!--<span t-esc='"{:,.2f}".format(abs(tva)).replace(","," ").replace(".",",")'/> €-->
                                 <span t-field="o.is_tva" t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
@@ -356,7 +323,7 @@
                     <i>
                     Pénalités en cas de retard de paiement : 
                     3 fois le taux d'intéret légal + 40€ de forfait de recouvrement. 
-                    Escompte pour réglement anticipé : 0.5% par mois.
+                    Escompte pour réglement anticipé : Néant.
                     </i>
                 </span>
             </p>
