[1506] ajout alerte si ref client existe déjà

--- a/views/report_proforma.xml
+++ b/views/report_proforma.xml
@@ -203,7 +203,7 @@
                             <i>
                             Pénalités en cas de retard de paiement : 
                             3 fois le taux d'intéret légal + 40€ de forfait de recouvrement. 
-                            Escompte pour réglement anticipé : 0.5% par mois.
+                            Escompte pour réglement anticipé : Néant.
                             </i>
                         </span>
                     </p>
