--- a/report/is_ligne_reception.xml
+++ b/report/is_ligne_reception.xml
@@ -41,6 +41,7 @@
                             <field name="move_id"/>
                             <field name="user_id"/>
                             <field name="is_facturable"/>
+                            <field name="is_dosmat_ctrl_qual"/>
                         </group>
                     </group>
                 </sheet>
@@ -65,6 +66,7 @@
                 <field name="is_demandeur_id"/>
                 <field name="is_date_confirmation"/>
                 <field name="is_ctrl_rcp"/>
+                <field name="is_dosmat_ctrl_qual"/>
                 <field name="is_commentaire"/>
            </tree>
         </field>
@@ -80,6 +82,7 @@
                 <field name="partner_id"/>
                 <field name="product_id"/>
                 <field name="is_ctrl_rcp"/>
+                <field name="is_dosmat_ctrl_qual"/>
                 <field name="ref_fournisseur"/>
                 <field name="is_cfc_id"/>
                 <field name="commande_ouverte"/>
