--- a/report/is_purchase_order_line.xml
+++ b/report/is_purchase_order_line.xml
@@ -96,6 +96,17 @@
            </tree>
         </field>
     </record>
+
+    <record id="is_purchase_order_line_action" model="ir.actions.server">
+        <field name="name">Lignes commandes achat</field>
+        <field name="condition">True</field>
+        <field name="type">ir.actions.server</field>
+        <field name="model_id" ref="model_is_purchase_order_line"/>
+        <field name="state">code</field>
+        <field name="code">action = self.refresh_purchase_order_line_action(cr, uid, context.get('active_ids', []), context=context)</field>
+    </record>
+
+    <!--
     <record id="is_purchase_order_line_action" model="ir.actions.act_window">
         <field name="name">Lignes commandes achat</field>
         <field name="res_model">is.purchase.order.line</field>
@@ -105,6 +116,7 @@
         <field name="view_id" ref="is_purchase_order_line_tree_view"/>
         <field name="view_mode">tree,form</field>
     </record>
+    -->
 
 </data>
 </openerp>
