ajout du code swift dans la banque et sur les factures #1583

--- a/views/report_invoice.xml
+++ b/views/report_invoice.xml
@@ -341,17 +341,21 @@
                 <strong>Type de règlement : </strong>
                 <span t-field="o.partner_id.is_type_reglement.name"/>
             </p>
-            <table class="table table-condensed" style="width:50%" t-if="o.partner_id.is_rib_id">
+            <table class="table table-condensed" style="width:75%" t-if="o.partner_id.is_rib_id">
                 <thead>
                     <tr>
                         <th>IBAN</th>
                         <th>Banque</th>
+                        <th>Code d'identification bancaire</th>
+                        <th>Code swift</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td><span t-field="o.partner_id.is_rib_id.acc_number"/></td>
                         <td><span t-field="o.partner_id.is_rib_id.bank_name"/></td>
+                        <td><span t-field="o.partner_id.is_rib_id.bank_bic"/></td>
+                        <td><span t-field="o.partner_id.is_rib_id.is_bank_swift"/></td>
                     </tr>
                 </tbody>
             </table>
