add étiquettes sur liste à servir

--- a/views/report_bon_transfert.xml
+++ b/views/report_bon_transfert.xml
@@ -238,7 +238,7 @@
                         <t t-set="res" t-value="o.get_etiquettes()"/>
                         <tr t-foreach="res" t-as="obj">
                             <t t-if="obj['is_code_rowspan']">
-                                <td style="padding:2px;" t-att-rowspan="obj['is_code_rowspan']"><span t-esc="obj['is_code']"/> <span t-esc="obj['is_code_rowspan']"/></td>
+                                <td style="padding:2px;" t-att-rowspan="obj['is_code_rowspan']"><span t-esc="obj['is_code']"/></td>
                             </t>
                             <t t-if="obj['um_rowspan']">
                                 <td style="padding:2px;" t-att-rowspan="obj['um_rowspan']"><span t-esc="obj['um']"/></td>
