--- a/report/is_livraison_gefco.xml
+++ b/report/is_livraison_gefco.xml
@@ -15,6 +15,7 @@
                             <field name="is_mold_dossierf" />
                             <field name="product_id" />
                             <field name="uc" />
+                            <field name="um" />
                             <field name="product_uom_qty" />
                             <field name="nb_uc" />
                             <field name="nb_um" />
@@ -32,13 +33,14 @@
                 <field name="is_date_expedition" />
                 <field name="partner_id"           widget="many2one_clickable"/>
                 <field name="picking_id"           widget="many2one_clickable"/>
-                <field name="client_order_ref" />
-                <field name="is_mold_dossierf" />
+                <field name="client_order_ref"/>
+                <field name="is_mold_dossierf"/>
                 <field name="product_id"           widget="many2one_clickable"/>
-                <field name="uc" />
-                <field name="product_uom_qty" />
-                <field name="nb_uc" />
-                <field name="nb_um" />
+                <field name="uc"/>
+                <field name="um"/>
+                <field name="product_uom_qty"/>
+                <field name="nb_uc"/>
+                <field name="nb_um"/>
            </tree>
         </field>
     </record>
@@ -53,6 +55,7 @@
                 <field name="is_mold_dossierf" />
                 <field name="product_id" />
                 <field name="uc" />
+                <field name="um" />
             </search>
         </field>
     </record>
