--- a/report/is_account_invoice_line.xml
+++ b/report/is_account_invoice_line.xml
@@ -239,6 +239,7 @@
             <tree create="false">
                 <field name="date_invoice"/>
                 <field name="invoice_id"           widget="many2one_clickable"/>
+                <field name="type"/>
                 <field name="picking_id"           widget="many2one_clickable"/>
                 <field name="partner_id"           widget="many2one_clickable"/>
                 <field name="product_id"           widget="many2one_clickable"/>
